// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Badge passes the snapshot test for different color schemes 1`] = `
Array [
  <View
    colorScheme="primary"
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "marginBottom": 12,
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
  <View
    colorScheme="success"
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#A2D608",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "marginBottom": 12,
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
  <View
    colorScheme="warning"
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#FFBF35",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "marginBottom": 12,
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
  <View
    colorScheme="info"
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#40D2F7",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "marginBottom": 12,
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
  <View
    colorScheme="danger"
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#FF4B42",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "marginBottom": 12,
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
]
`;

exports[`Molecules/Badge passes the snapshot test for different sizes 1`] = `
Array [
  <View
    onLayout={[Function]}
    size="s"
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 20,
        "justifyContent": "center",
        "minWidth": 20,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 4,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
  <View
    onLayout={[Function]}
    size="m"
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
  <View
    onLayout={[Function]}
    size="l"
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 30,
        "justifyContent": "center",
        "minWidth": 30,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 13.799999999999999,
          "fontWeight": "500",
          "lineHeight": 18.4,
          "paddingHorizontal": 8,
        }
      }
      variant="btn3"
    >
      2
    </Text>
  </View>,
  <View
    onLayout={[Function]}
    size="xl"
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 35,
        "justifyContent": "center",
        "minWidth": 35,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 13.799999999999999,
          "fontWeight": "500",
          "lineHeight": 18.4,
          "paddingHorizontal": 12,
        }
      }
      variant="btn3"
    >
      2
    </Text>
  </View>,
]
`;

exports[`Molecules/Badge passes the snapshot test for different values types 1`] = `
Array [
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "minWidth": 25,
      }
    }
  />,
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      23
    </Text>
  </View>,
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "minWidth": 25,
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2+
    </Text>
  </View>,
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "minWidth": 25,
      }
    }
  >
    <Text />
  </View>,
]
`;

exports[`Molecules/Badge passes the snapshot test for different variants 1`] = `
Array [
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 1000,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "marginBottom": 12,
        "minWidth": 25,
      }
    }
    variant="rounded"
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      2
    </Text>
  </View>,
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderRadius": 8,
        "display": "flex",
        "height": 25,
        "justifyContent": "center",
        "marginBottom": 12,
        "minWidth": 25,
      }
    }
    variant="square"
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "color": "#FFFFFF",
          "display": "flex",
          "fontFamily": "Poppins-Medium",
          "fontSize": 11.5,
          "fontWeight": "500",
          "lineHeight": 16.099999999999998,
          "paddingHorizontal": 8,
        }
      }
      variant="btn4"
    >
      NEW
    </Text>
  </View>,
]
`;

exports[`Molecules/Badge withBadge HOC works as expected 1`] = `
Array [
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
      }
    }
  >
    <Text />
    <View
      onLayout={[Function]}
      size="s"
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "display": "flex",
          "height": 20,
          "justifyContent": "center",
          "minWidth": 20,
          "position": "absolute",
          "right": -5,
          "top": -5,
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "color": "#FFFFFF",
            "display": "flex",
            "fontFamily": "Poppins-Medium",
            "fontSize": 11.5,
            "fontWeight": "500",
            "lineHeight": 16.099999999999998,
            "paddingHorizontal": 4,
          }
        }
        variant="btn4"
      >
        28
      </Text>
    </View>
  </View>,
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
      }
    }
  >
    <Text />
    <View
      onLayout={[Function]}
      size="m"
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "bottom": -5,
          "display": "flex",
          "height": 25,
          "justifyContent": "center",
          "minWidth": 25,
          "position": "absolute",
          "right": -5,
        }
      }
    >
      <Text />
    </View>
  </View>,
]
`;
